src/components/NumericCard/NumericCard.module.css
.card {
  background: var(--card-background);
  flex: 1;
  padding: 20px;
  display: flex;
  flex-direction: column;
  border-radius: 12px;
  border: 1px solid var(--border-color);
  align-items: flex-start;
  transition: .3s ease-in-out;
}

.heading {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 10px;
}

.title {
  font-size: 14px;
  font-weight: 500;
  color: var(--description-color);
  text-align: left;
}

.number {
  font-size: 32px;
  font-weight: 700;
  color: var(--title-color);
}

